made all pictures load correctly, highlighted due date

--- a/manifest.json
+++ b/manifest.json
@@ -17,9 +17,9 @@
 
         {
             "js": ["scripts/content.js"],
-            "matches": [
-                "*://www.gradescope.com/*"
-            ]
+            "matches": 
+            ["*://www.gradescope.com/*"],
+            "css": ["css/styles.css"]
         }
     ], 
 
